# Spotify-Hybrid-Recommender-System

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.github/workflows/: ci.yaml
backend/: config.py  logger.py  main.py  models.py
backend/pipeline/: data_cleaning.py  feature_engineering.py  interaction_matrix.py
backend/recommenders/: collaborative.py  content_based.py  hybrid.py
deploy/: docker-compose.deploy.yml
deploy/scripts/: install_dependencies.sh  start_docker.sh
frontend/: app.py
scripts/: evaluate.py  show_runs.py  train_pipeline.py
tests/: test_api.py
