[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-hybrid-recommender"
version = "1.0.0"
description = "Hybrid music recommender system using NMF matrix factorisation and FAISS similarity search"
requires-python = ">=3.11"
dependencies = [
    # Data & ML core
    "scikit-learn>=1.6.0",
    "scipy>=1.14.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "category-encoders>=2.6.4",
    "joblib>=1.4.0",
    "faiss-cpu>=1.9.0",
    "dask[dataframe]>=2024.12.0",
    # API layer
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Frontend
    "streamlit>=1.45.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
pipeline = [
    "dvc[s3]>=3.58.0",
    "boto3>=1.36.0",
    "mlflow>=2.17.0",
    "tqdm>=4.67.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ipykernel>=6.29.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
